# personal-MTA-PA-Train-Schdule

esp32-mta-display/: .gitignore  README.md  debug_live_realtime.py  diagnose_feeds.py  realtime_example.yml  realtime_live_test.yml  run_compile_status.py  run_from_txt.py  run_local_service.py  status_sample.txt
esp32-mta-display/backend/: pyproject.toml
esp32-mta-display/backend/src/esp32_mta_display/: __init__.py  main.py
esp32-mta-display/backend/src/esp32_mta_display/config/: aliases.yml  feeds.csv
esp32-mta-display/backend/src/esp32_mta_display/config/displays/: example.yml
esp32-mta-display/backend/src/esp32_mta_display/models/: arrivals.py
esp32-mta-display/backend/src/esp32_mta_display/routers/: display.py
esp32-mta-display/backend/src/esp32_mta_display/services/: alias_resolver.py  config_loader.py  feed_lookup.py  feed_selector.py  mta.py  path.py  realtime.py  renderer.py  status_compiler.py  status_renderer.py
esp32-mta-display/backend/src/esp32_mta_display/utils/: color.py  time.py
esp32-mta-display/backend/src/esp32_mta_display_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
esp32-mta-display/backend/tests/: test_backend.py  test_diagnose_feeds.py  test_feed_selector.py  test_realtime_query.py  test_run_from_txt.py  test_status_compiler.py  test_wtc_alias.py
esp32-mta-display/esp32_client/: README.md  config.example.h  esp32-mta-display.ino
